fix footer style alignment

--- a/app/style/style.css
+++ b/app/style/style.css
@@ -70,7 +70,8 @@ body {
 }
 
 .footer-image{
-    height:50px;
+    height: 30px;
+    margin: 1px 7px 7px 7px;
 }
 
 .footer-typography{
